Fixes #124 – vertically aligns contact details
Adds top vertical alignment to contact details, so that when there are
multiple phone numbers the other contact details don't float downward.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1526,6 +1526,7 @@ fade-out
 {
     display:inline-block;
     margin-bottom: 10px;
+    vertical-align: top;
 }
 
 #detail-info .contact-box div span
